--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #DB connection
 spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=ChatApp
 spring.datasource.username=sa
-spring.datasource.password=sa
+spring.datasource.password=moe
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=validate
